@@ -1,0 +1,2 @@
+-- Modify fatal_police_shootings AGE column to lowercase
+ALTER TABLE fatal_police_shootings RENAME COLUMN AGE to age;
