@@ -1,0 +1,2 @@
+-- Modify fatal_police_shootings GENDER column to lowercase
+ALTER TABLE fatal_police_shootings RENAME COLUMN GENDER to gender;
