@@ -1,0 +1,2 @@
+-- Drop column vaccinations from the state_vaccinations table
+ALTER TABLE state_vaccinations DROP COLUMN vaccinations;
